Updated case layout

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,7 +1,7 @@
 en:
  title_headline: "<span>I'm<strong>Magnus<br>Ottosson</strong>- A Senior Software Developer &amp; Creative"
  title: "Magnus Ottosson - A Senior Software Developer & Creative"
- intro: "I have dedicated my entire professional and personal life developing myself into not only to become the best possible software developer I can be, but also being one step ahread of the curve at all times."
+ intro: "I have dedicated my entire professional and personal life developing myself into not only to become the best possible software developer I can be, but also being one step ahead of the curve at all times."
  intro2: "Drop me a line at %{email}, check my %{linkedin}, or download my %{cv}. Below is a selection of my work."
  footer: "For new projects, ideas, business inquiries or quotations, or anything you’d like to discuss, email me at %{email}"
  footer_connect: "Connect with me:"
